# hierarchical-tree

./: README.md  dune  hierarchical-tree.opam
.github/workflows/: test_suite.yml
docker/: Dockerfile
src/: dune  edge.ml  edge.mli  node.ml  node.mli  parent.ml  signatures.ml  tree.ml  tree.mli
test/: dune  parent_tests.ml  test_edge.ml  test_node.ml  test_tree.ml  tree_tests.ml
