opam-version: "2.0"
maintainer: "david-engelmann"
homepage: "https://github.com/david-engelmann/hierarchical-tree"
bug-reports: "https://github.com/david-engelmann/hierarchical-tree/issues"
dev-repo: "git+https://github.com/david-engelmann/hierarchical-tree.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.14.0"}
    "core"
    "async"
    "dune" {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Tools for working with hierarchical trees"
description: "
A collection of tools for working with hierarchical trees from OCaml.
"
